# ecen390_42

./: CMakeLists.txt  README.md  check_and_zip.py  run_elf_on_board.py
drivers/: CMakeLists.txt
lasertag/: CMakeLists.txt  autoReloadTimer.c  buffer.c  detector.c  detector.h  filter.c  game.c  hitLedTimer.c  invincibilityTimer.c  isr.c  lockoutTimer.c  main.c  queue.c  transmitter.c  trigger.c
lasertag/bluetooth/: CMakeLists.txt
lasertag/sound/: sound.c
lasertag/support/: filterTest.c  queueTest.c  runningModes.c
tools/fpga-programmer/: setup.cfg
